# osm-3d-viewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  briefing.md  run.bat  run.sh
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  deploy-pages.yml
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_frontend_serving.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: camera.test.ts  camera.ts  health.test.ts  health.ts  main.ts  map-config.test.ts  map-config.ts  style.css  theme.test.ts  theme.ts
