[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend: serves the built frontend and a small JSON API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=1.14",
    "pytest>=8.3",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
